data/derived/fa15/progs/unify/prog2902.ml.out
Characters 85-86:
  if x = 0 then [] else x
                        ^
Error: This expression has type int but an expression was expected of type
         'a list
